--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -158,19 +158,14 @@ dns:
     - "+.stun.*.*.*.*"
     - "+.stun.*.*.*.*.*"
     - "+.dns.google"
+    #bark 
     - "+.api.day.app"
-    - tracker.*.*
-    - tracker.*.*.*
-    - "+.tracker.*.*"
-    - "+.tracker.*.*.*"
-    - "+.tracker.*.*.*.*"
-    - "+.tracker.*.*.*.*.*"
-    - torrent.*.*
-    - torrent.*.*.*
-    - "+.torrent.*.*"
-    - "+.torrent.*.*.*"
-    - "+.torrent.*.*.*.*"
-    - "+.torrent.*.*.*.*.*"
+    #放行tracker和torrent
+    - "tracker.+"
+    - "trackers.+"
+    #Qbittorrent推送
+    - "+.alpinelinux.org"
+    
   # Supports UDP, TCP, DoT, DoH. You can specify the port to connect to.
   # All DNS questions are sent directly to the nameserver, without proxies
   # involved. Clash answers the DNS question with the first result gathered.
