--- a/refuse.yaml
+++ b/refuse.yaml
@@ -7,4 +7,6 @@
     - DOMAIN-SUFFIX,playstation.org
     - DOMAIN,playstation.sony.akadns.net
     - DOMAIN,a192.d.akamai.net
+    # 薅叔叔羊毛
+    - DOMAIN,mcdn.bilivideo.cn
     
