--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -316,7 +316,7 @@ proxy-providers:
   #   health-check:
   #     enable: true
   #     interval: 600
-  #     url: https://i.ytimg.com/generate_204
+  #     url: https://www.youtube.com/generate_204
   # 此处只是订阅示例，如果没有订阅链接的使用需求，此处及 proxy-groups 的相关内容可删除
 
   Airport A: 
@@ -328,7 +328,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: https://i.ytimg.com/generate_204
+      url: https://www.youtube.com/generate_204
   
 
   Airport B:      
@@ -340,7 +340,7 @@ proxy-providers:
     health-check:
       enable: true
       interval: 600
-      url: https://i.ytimg.com/generate_204    
+      url: https://www.youtube.com/generate_204    
  
   #MIXED US:      
   #  type: http
@@ -351,7 +351,7 @@ proxy-providers:
   #  health-check:
   #    enable: true
   #    interval: 600
-  #    url: https://i.ytimg.com/generate_204    
+  #    url: https://www.youtube.com/generate_204    
   
 
 proxy-groups:
@@ -415,14 +415,14 @@ proxy-groups:
     proxies:
       - main(Auto)
       - backup(Auto)
-    url: 'https://i.ytimg.com/generate_204'
+    url: 'https://www.youtube.com/generate_204'
     interval: 300 
 
   - name: "main(Auto)"
     type: url-test
     use:
       - Airport A
-    url: 'https://i.ytimg.com/generate_204'
+    url: 'https://www.youtube.com/generate_204'
     interval: 300
     tolerance: 40
     filter: '香港|hk|hong'
@@ -433,7 +433,7 @@ proxy-groups:
     type: url-test
     use:
       - Airport B
-    url: 'https://i.ytimg.com/generate_204'
+    url: 'https://www.youtube.com/generate_204'
     interval: 300
     tolerance: 40
     #lazy: true
