rm some stun url

--- a/refuse.yaml
+++ b/refuse.yaml
@@ -9,11 +9,11 @@
     - DOMAIN,a192.d.akamai.net
     # 薅叔叔羊毛
     #- DOMAIN-SUFFIX,mcdn.bilivideo.cn
-    - DOMAIN,stun-5.chat.bilibili.com
-    - DOMAIN,stun-3.chat.bilibili.com
-    - DOMAIN,stun-4.chat.bilibili.com
-    - DOMAIN,stun-2.chat.bilibili.com
-    - DOMAIN,stun-1.chat.bilibili.com
+    #- DOMAIN,stun-5.chat.bilibili.com
+    #- DOMAIN,stun-3.chat.bilibili.com
+    #- DOMAIN,stun-4.chat.bilibili.com
+    #- DOMAIN,stun-2.chat.bilibili.com
+    #- DOMAIN,stun-1.chat.bilibili.com
     - DOMAIN,stun.chat.bilibili.com
 
     
