--- a/Clash config/homesick.yaml
+++ b/Clash config/homesick.yaml
@@ -124,7 +124,7 @@ dns:
   
   
   nameserver:
-    - 192.168.1.1:5553
+    - UDP://192.168.1.1:53
     
     
     
@@ -135,7 +135,7 @@ dns:
   
   
   fallback:
-    - 192.168.1.1:5553
+    - UDP://192.168.1.1:53
   
   
   
