--- a/Clash config/homesick.yaml
+++ b/Clash config/homesick.yaml
@@ -124,8 +124,7 @@ dns:
   
   
   nameserver:
-    - 119.29.29.29
-    - 223.5.5.5
+    - UDP://192.168.1.1:53
     
     
     
@@ -136,8 +135,7 @@ dns:
   
   
   fallback:
-   - quic://cn-east.ovo.glass:853
-   - quic://dns.nextdns.io:853
+    - UDP://192.168.1.1:53
   
   
   
