update default -nameserver

--- a/Clash config/homesick.yaml
+++ b/Clash config/homesick.yaml
@@ -31,8 +31,7 @@ dns:
   listen: 0.0.0.0:7874
   
   default-nameserver:
-    - 119.29.29.29
-    - 223.5.5.5
+    - UDP://192.168.1.1:53
   enhanced-mode: fake-ip 
   fake-ip-range: 198.18.0.1/16 
   
