--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -37,6 +37,7 @@ backup(Auto) = url-test,Cordcloud,use=true,policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
 main (Manual) = select,SSRCLOUD CNIX,use=true
 backup (Manual) = select,Cordcloud,use=true
+TikTok = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=台湾|TW
 DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
 
 
@@ -51,6 +52,8 @@ DOMAIN-KEYWORD,dmm,DMM
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Proxy.yaml,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/domestic.yaml,DIRECT
+RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Tiktok_domain.yaml,TIKTOK
+RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/BilibiliHMT_domain.yaml,DIRECT
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/lancidr.txt,DIRECT,no-resolve
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Telegram_ip.yaml,✈️PROXY,no-resolve
 GEOIP,CN,DIRECT
