--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -187,7 +187,7 @@ dns:
       - 223.6.6.6         
   nameserver-policy:
       "geosite:gfw": [tls://dns.google#DNS,quic://dns.nextdns.io#DIRECT]           #[https://doh.pub/dns-query,https://dns.alidns.com/dns-query]
-      "geosite:cn": [223.6.6.6,119.29.29.29]           
+      "geosite:cn,private": [223.6.6.6,119.29.29.29]           
     # - 114.114.114.114 # default value
     # - 8.8.8.8 # default value
     # - tls://dns.rubyfish.cn:853 # DNS over TLS
