- GEOSITE,microsoft@cn,DIRECT     - RULE-SET,Microsoft,✈️PROXY

--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -870,7 +870,8 @@ rules:
     
     - RULE-SET,bt-trackers,DIRECT
    
-    - RULE-SET,Microsoft,DIRECT
+    - GEOSITE,microsoft@cn,DIRECT
+    - RULE-SET,Microsoft,✈️PROXY
     
     - GEOSITE,apple@cn,DIRECT
     - GEOSITE,apple-cn,DIRECT
