--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -69,7 +69,7 @@ hosts:
   # 'alpha.clash.dev': '::1'
   
   #dns
-  #'music.163-my-beloved.com': 76.76.21.21
+  'music.163-my-beloved.com': 76.76.21.21
   #'dns.google': 8.8.4.4
   #'dns.nextdns.io': 45.11.104.186
   #'1dot1dot1dot1.cloudflare-dns.com': 1.0.0.1
