direct time.microsoft.com

--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -884,6 +884,7 @@ rules:
     
     - RULE-SET,bt-trackers,DIRECT
    
+    - domain,time.windows.com,DIRECT
     - GEOSITE,microsoft@cn,DIRECT
     - RULE-SET,Microsoft,✈️PROXY
     
