--- a/Proxy.yaml
+++ b/Proxy.yaml
@@ -71,4 +71,7 @@
   - DOMAIN,authenticate.riotgames.com
   - DOMAIN,login.riotgames.com
   - DOMAIN,login.playvalorant.com
+
+  #unblockneteasemusic
+  - DOMAIN,music.163-my-beloved.com
   
