--- a/refuse.yaml
+++ b/refuse.yaml
@@ -17,4 +17,6 @@
     - DOMAIN,stun.chat.bilibili.com
     - DOMAIN-KEYWORD,pcdn
 
+    #unblockneteasemusic
+    - DOMAIN,music.163-my-beloved.com
     
