update riotgame proxygroup

--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -540,7 +540,8 @@ proxy-groups:
       - ✈️PROXY
       - DIRECT
       - 🎮online game
-      - 🇹🇼Baha
+    use:
+      - Airport B
 
   - name: "🇺🇸AI"
     type: select
