--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -32,13 +32,13 @@ update-url = https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6
 网易云音乐 = select,🎵 网易云音乐
 ✈️PROXY = select,Auto,Manual
 Auto = fallback,main(Auto),backup(Auto)
-main(Auto) = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=港
-backup(Auto) = url-test,Cordcloud,use=true,policy-regex-filter=港
+main(Auto) = url-test,flower,use=true,policy-regex-filter=港
+backup(Auto) = url-test,one Dollar,use=true,policy-regex-filter=港
 Manual = select,main (Manual),backup (Manual)
-main (Manual) = select,SSRCLOUD CNIX,use=true
-backup (Manual) = select,Cordcloud,use=true
-TikTok = url-test,SSRCLOUD CNIX,use=true,policy-regex-filter=台湾|TW
-DMM = select,SSRCLOUD CNIX,use=true,policy-regex-filter=日本
+main (Manual) = select,flower,use=true
+backup (Manual) = select,one Dollar,use=true
+TikTok = url-test,flower,use=true,policy-regex-filter=台湾|TW
+DMM = select,flower,use=true,policy-regex-filter=日本
 
 
 [Rule]
