--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -47,7 +47,7 @@ RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/r
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/AdvertisingLite/AdvertisingLite_Domain.list,REJECT
 RULE-SET,https://raw.githubusercontent.com/DesperadoJ/Rules-for-UnblockNeteaseMusic/master/Surge/RuleSet/NeteaseMusic.list,网易云音乐
 RULE-SET,https://raw.githubusercontent.com/zzz6839/PROXY-PROVIDERS-SYNC/zzz6839-patch-1/Proxy.yaml,✈️PROXY
-RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Microsoft_domain.yaml,DIRECT
+RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Microsoft_domain.yaml,✈️PROXY
 RULE-SET,https://raw.githubusercontent.com/zzz6839/CUSTOM_CLASH_RULESET/release/Apple_domain.yaml,DIRECT
 DOMAIN-KEYWORD,dmm,DMM
 DOMAIN-SET,https://raw.githubusercontent.com/Loyalsoldier/clash-rules/release/gfw.txt,✈️PROXY
