--- a/Clash config/20220723Phone.conf
+++ b/Clash config/20220723Phone.conf
@@ -10,7 +10,7 @@ all-hybrid = true
 test-timeout = 5
 
 # > 代理测速 URL
-proxy-test-url = http://www.gstatic.com/generate_204
+proxy-test-url = https://www.youtube.com/generate_204
 # > GeoIP数据库
 geoip-maxmind-url = https://raw.githubusercontent.com/alecthw/mmdb_china_ip_list/release/lite/Country.mmdb
 
