--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -187,7 +187,7 @@ dns:
       - 223.6.6.6         
   nameserver-policy:
       "rule-set:ProxyDNS": [tls://dns.google#DNS,quic://dns.nextdns.io#DIRECT]
-      "rule-set:DomesticDNS": [223.6.6.6,119.29.29.29]  
+      "rule-set:DomesticDNS": [223.6.6.6,119.29.29.29]   #with your local isp dns server, not fixed
       "geosite:gfw": [tls://dns.google#DNS,quic://dns.nextdns.io#DIRECT]           #[https://doh.pub/dns-query,https://dns.alidns.com/dns-query]
       "geosite:cn,private": [223.6.6.6,119.29.29.29]
           
