- DOMAIN-SUFFIX,msftconnecttest.com   - DOMAIN-SUFFIX,msftncsi.com

--- a/ProxyDNS.yaml
+++ b/ProxyDNS.yaml
@@ -2,3 +2,6 @@ payload:
   
   - DOMAIN-SUFFIX,000webhost.com
   - DOMAIN-SUFFIX,030buy.com
+
+  - DOMAIN-SUFFIX,msftconnecttest.com
+  - DOMAIN-SUFFIX,msftncsi.com
