--- a/DomesticDNS.yaml
+++ b/DomesticDNS.yaml
@@ -1,7 +1,7 @@
 payload:
   # WINDOWS
-  - DOMAIN-SUFFIX,msftconnecttest.com
-  - DOMAIN-SUFFIX,msftncsi.com
+  ##- DOMAIN-SUFFIX,msftconnecttest.com
+  ##- DOMAIN-SUFFIX,msftncsi.com
   # WECHAT
   - DOMAIN-SUFFIX,qlogo.cn
   - DOMAIN-SUFFIX,qpic.cn
