--- a/Clash config/new shit.yaml
+++ b/Clash config/new shit.yaml
@@ -70,6 +70,7 @@ hosts:
   
   #dns
   'music.163-my-beloved.com': 76.76.21.21
+  'msftconnecttest.com': 127.0.0.1
   #'dns.google': 8.8.4.4
   #'dns.nextdns.io': 45.11.104.186
   #'1dot1dot1dot1.cloudflare-dns.com': 1.0.0.1
@@ -186,8 +187,8 @@ dns:
       - 119.29.29.29      
       - 223.6.6.6         
   nameserver-policy:
-      "rule-set:ProxyDNS": [tls://dns.google#DNS,quic://dns.nextdns.io#DIRECT]
-      "rule-set:DomesticDNS": [223.6.6.6,119.29.29.29]   #with your local isp dns server, not fixed
+      #"rule-set:ProxyDNS": [tls://dns.google#DNS,quic://dns.nextdns.io#DIRECT]
+      #"rule-set:DomesticDNS": [223.6.6.6,119.29.29.29]   #with your local isp dns server, not fixed
       "geosite:gfw": [tls://dns.google#DNS,quic://dns.nextdns.io#DIRECT]           #[https://doh.pub/dns-query,https://dns.alidns.com/dns-query]
       "geosite:cn,private": [223.6.6.6,119.29.29.29]
           
